k8s/k8s-without-using-helm/ingress/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
spec:
  selector:
    app: ingress-controller
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
