k8s/k8s-without-using-helm/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway
  labels:
    name: apigateway
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        path: "/api/factory"
        backend:
          service:
            name: factory-svc
            port: 
              number: 8001
      - pathType: Prefix
        path: "/api/product"
        backend:
          service:
            name: product-service
            port:
              number: 8002
